<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_robot</name>
  <version>1.0.0</version>
  <description>ROS2 action server to control Raspberry Pi GPIO on Test Robot</description>

  <maintainer email="aliugur997@gmail.com">Ali Ugur</maintainer>
  <license>Apache License 2.0</license>

  <author email="aliugur997@gmail.com">Ali Ugur</author>

  <exec_depend>robot_interface</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  
  <test_depend>rclpy</test_depend>
  <test_depend>robot_interface</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
